--- a/Fitting.ipynb
+++ b/Fitting.ipynb
@@ -131,7 +131,7 @@
    "source": [
     "specific_rows = [9,10]\n",
     "\n",
-    "df = pd.read_csv('first_results.csv', header=None, usecols=[9,10])\n",
+    "df = pd.read_csv('.csv', header=None, usecols=[9,10])\n",
     "\n",
     "df"
    ]
@@ -365,15 +365,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.100875891949782e-05\n",
-      "1.6969404146825702e-05\n"
+      "5.471030968619224e-20\n",
+      "4.419115663235859e-20\n"
      ]
     }
    ],
@@ -387,8 +387,8 @@
     "sigma1=result.params.get(\"A_sigma\").value\n",
     "sigma2=result.params.get(\"B_sigma\").value\n",
     "\n",
-    "T1 = (sigma1**2*m*c**2)/(k*f_0)\n",
-    "T2 = (sigma2**2*m*c**2)/(k*f_0)\n",
+    "T1 = (sigma1**2*m*c**2)/(k*f_0**2)\n",
+    "T2 = (sigma2**2*m*c**2)/(k*f_0**2)\n",
     "\n",
     "print(T1)\n",
     "print(T2)\n"
