--- a/Fitting.ipynb
+++ b/Fitting.ipynb
@@ -11,8 +11,7 @@
     "import numpy as np\n",
     "from scipy.optimize import curve_fit\n",
     "import scipy.stats as stats\n",
-    "from lmfit import models\n",
-    "import math"
+    "from lmfit import models"
    ]
   },
   {
