--- a/Peak_finder.ipynb
+++ b/Peak_finder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2a2df1eb520>]"
+       "[<matplotlib.lines.Line2D at 0x2a2e06da940>]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -102,10 +102,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2a2df3719a0>"
+       "<matplotlib.collections.PathCollection at 0x2a2df0e6eb0>"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -140,21 +140,26 @@
      "output_type": "stream",
      "text": [
       "[-0.0351, -0.023, -0.002]\n",
-      "[1.5260869565217392, 11.5, 17.55]\n"
+      "[0.0121, 0.020999999999999998, 0.0331]\n",
+      "[0.5761904761904763, 0.634441087613293, 0.36555891238670696]\n"
      ]
     }
    ],
    "source": [
     "peak1, peak2, peak3=time[indices+500]\n",
     "peaks_list = [peak1, peak2, peak3]\n",
-    "ratio_peaks = [peaks_list[0]/peaks_list[1],peaks_list[1]/peaks_list[2],peaks_list[0]/peaks_list[2]]\n",
+    "\n",
+    "peak_diff=[abs(peaks_list[0]-peaks_list[1]), abs(peaks_list[1]-peaks_list[2]), abs(peaks_list[0]-peaks_list[2])]\n",
+    "\n",
+    "ratio_peaks = [peak_diff[0]/peak_diff[1],peak_diff[1]/peak_diff[2],peak_diff[0]/peak_diff[2]]\n",
     "print(peaks_list)\n",
+    "print(peak_diff)\n",
     "print(ratio_peaks)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +173,7 @@
        " -18.105499999999992]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +199,7 @@
        " 193.741]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,35 +211,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.2424129815434162,\n",
-       " 0.15388638407741947,\n",
-       " 0.10721005719622483,\n",
-       " 0.07679742415813016,\n",
-       " 0.6470571458795458,\n",
-       " 0.28069418914477545,\n",
-       " 0.15383902916438366,\n",
-       " 0.6107198795780252,\n",
-       " 0.24231105636490227,\n",
-       " 0.49767315816934116,\n",
-       " 0.3358410890481723,\n",
-       " 0.15383902916438366,\n",
-       " 0.09099139628638457,\n",
-       " 0.393436871515632,\n",
-       " 0.16254056329058314,\n",
-       " 0.369832633896881,\n",
-       " 0.177332700450355,\n",
-       " 0.08343880881929354,\n",
-       " 0.24241298154341628,\n",
-       " 0.15391945792038045]"
+       "[[1.735537190082644, 0.7880952380952384, 1.3677685950413219],\n",
+       " [1.0218529298176724, 0.9920747776457316, 1.013754518135507],\n",
+       " [0.6430156828577437, 1.1500846675318803, 0.739522477837233],\n",
+       " [0.39460907670285217, 1.2842015746696658, 0.5067575976807457],\n",
+       " [4.96988335383785, 0.40795907910098705, 2.027509036271014],\n",
+       " [2.0429394277842303, 0.7239788588732838, 1.4790449556744665],\n",
+       " [1.0214697138921152, 0.9922126731488551, 1.0135151953614916],\n",
+       " [4.680229056358972, 0.4263773156635591, 1.9955435017409309],\n",
+       " [1.7347179472865246, 0.7882812882042094, 1.3674456981579837],\n",
+       " [3.7784766178668745, 0.49610633657442754, 1.874526192722068],\n",
+       " [2.484941676918925, 0.6481580115163807, 1.6106348560459511],\n",
+       " [1.0214697138921152, 0.992212673148855, 1.0135151953614916],\n",
+       " [0.5107348569460576, 1.217812060520954, 0.621979068517353],\n",
+       " [2.945797015371203, 0.5843499032595642, 1.7213762009544753],\n",
+       " [1.091854028957073, 0.9675127982507244, 1.0563827468375853],\n",
+       " [2.7570069039747596, 0.608906030260477, 1.678758129299999],\n",
+       " [1.2113649743834336, 0.9282755372974084, 1.1244804724590431],\n",
+       " [0.4489901106276214, 1.2522330067439422, 0.5622402362295216],\n",
+       " [1.7355371900826444, 0.7880952380952382, 1.3677685950413223],\n",
+       " [1.0221205761358194, 0.9919784911649306, 1.0139216269038398]]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,9 +256,8 @@
     "        ratio_of_ratio=ratio/ratio_peaks[ratio_counter]\n",
     "        sum_list.append(ratio_of_ratio)\n",
     "        ratio_counter+=1\n",
-    "    accuracy.append(sum(sum_list)/3)\n",
+    "    accuracy.append(sum_list)\n",
     "    \n",
-    "\n",
     "accuracy\n"
    ]
   }
