added comment at end

--- a/Peak_finder.ipynb
+++ b/Peak_finder.ipynb
@@ -260,6 +260,13 @@
     "    \n",
     "accuracy\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking at the last list we see that, from left to right, our peaks line up with CO13, CO23 and F3.\n"
+   ]
   }
  ],
  "metadata": {
