Added lines to comment

--- a/Peak_finder.ipynb
+++ b/Peak_finder.ipynb
@@ -211,9 +211,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-229.852, -151.38150000000002, -18.105499999999992) (-229.852, -72.911, 193.741) (-151.38150000000002, -72.911, 60.415000000000006) (-18.105499999999992, 60.415000000000006, 193.741)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -239,7 +246,7 @@
        " [1.0221205761358194, 0.9919784911649306, 1.0139216269038398]]"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,15 +264,18 @@
     "        sum_list.append(ratio_of_ratio)\n",
     "        ratio_counter+=1\n",
     "    accuracy.append(sum_list)\n",
-    "    \n",
-    "accuracy\n"
+    "\n",
+    "print(combination[1], combination[6],combination[11],combination[-1])\n",
+    "accuracy"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the last list we see that, from left to right, our peaks line up with CO13, CO23 and F3.\n"
+    "Looking at the last list we see that, from left to right, our peaks line up with CO13, CO23 and F3.\n",
+    "\n",
+    "However, there are also other peaks that it lines up with, so we should use other arguments to determine the peaks."
    ]
   }
  ],
