Ive run the programm changing some things

--- a/Peak_finder.ipynb
+++ b/Peak_finder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2a2e0d659d0>]"
+       "[<matplotlib.lines.Line2D at 0x1c463e15400>]"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -102,10 +102,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2a299e39d30>"
+       "<matplotlib.collections.PathCollection at 0x1c464936520>"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        " -18.105499999999992]"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        " 193.741]"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,9 +211,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1.735537190082644, 0.7880952380952384, 1.3677685950413219],\n",
+       " [1.0218529298176724, 0.9920747776457316, 1.013754518135507],\n",
+       " [0.6430156828577437, 1.1500846675318803, 0.739522477837233],\n",
+       " [0.39460907670285217, 1.2842015746696658, 0.5067575976807457],\n",
+       " [4.96988335383785, 0.40795907910098705, 2.027509036271014],\n",
+       " [2.0429394277842303, 0.7239788588732838, 1.4790449556744665],\n",
+       " [1.0214697138921152, 0.9922126731488551, 1.0135151953614916],\n",
+       " [4.680229056358972, 0.4263773156635591, 1.9955435017409309],\n",
+       " [1.7347179472865246, 0.7882812882042094, 1.3674456981579837],\n",
+       " [3.7784766178668745, 0.49610633657442754, 1.874526192722068],\n",
+       " [2.484941676918925, 0.6481580115163807, 1.6106348560459511],\n",
+       " [1.0214697138921152, 0.992212673148855, 1.0135151953614916],\n",
+       " [0.5107348569460576, 1.217812060520954, 0.621979068517353],\n",
+       " [2.945797015371203, 0.5843499032595642, 1.7213762009544753],\n",
+       " [1.091854028957073, 0.9675127982507244, 1.0563827468375853],\n",
+       " [2.7570069039747596, 0.608906030260477, 1.678758129299999],\n",
+       " [1.2113649743834336, 0.9282755372974084, 1.1244804724590431],\n",
+       " [0.4489901106276214, 1.2522330067439422, 0.5622402362295216],\n",
+       " [1.7355371900826444, 0.7880952380952382, 1.3677685950413223],\n",
+       " [1.0221205761358194, 0.9919784911649306, 1.0139216269038398]]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "combination = list(combinations(other_peaks, 3))\n",
     "accuracy = []\n",
@@ -226,12 +256,14 @@
     "        ratio_of_ratio=ratio/ratio_peaks[ratio_counter]\n",
     "        sum_list.append(ratio_of_ratio)\n",
     "        ratio_counter+=1\n",
-    "    accuracy.append(sum_list)\n"
+    "    accuracy.append(sum_list)\n",
+    "\n",
+    "accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +275,7 @@
        " (-18.105499999999992, 60.415000000000006, 193.741)]"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
