--- a/endfile.ipynb
+++ b/endfile.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1f761d3be20>"
+       "<matplotlib.legend.Legend at 0x1f7633369a0>"
       ]
      },
-     "execution_count": 381,
+     "execution_count": 423,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,16 +150,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1f761db2f70>"
+       "<matplotlib.legend.Legend at 0x1f7633abb20>"
       ]
      },
-     "execution_count": 385,
+     "execution_count": 427,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -185,16 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1f761e1da00>"
+       "<matplotlib.legend.Legend at 0x1f76341d460>"
       ]
      },
-     "execution_count": 386,
+     "execution_count": 428,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,16 +310,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1f761ea5970>]"
+       "[<matplotlib.lines.Line2D at 0x1f7634a5490>]"
       ]
      },
-     "execution_count": 391,
+     "execution_count": 433,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [
     {
@@ -358,10 +358,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1f761f109a0>"
+       "<matplotlib.collections.PathCollection at 0x1f76350d4c0>"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 434,
      "metadata": {},
      "output_type": "execute_result"
     },
