--- a/endfile.ipynb
+++ b/endfile.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1098,
+   "execution_count": 1124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1099,
+   "execution_count": 1125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1100,
+   "execution_count": 1126,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1f77c7a8e80>"
+       "<matplotlib.legend.Legend at 0x1f77e0cf520>"
       ]
      },
-     "execution_count": 1100,
+     "execution_count": 1126,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1101,
+   "execution_count": 1127,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1102,
+   "execution_count": 1128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1103,
+   "execution_count": 1129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,16 +150,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1104,
+   "execution_count": 1130,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1f77dcd3f40>"
+       "<matplotlib.legend.Legend at 0x1f77e1425e0>"
       ]
      },
-     "execution_count": 1104,
+     "execution_count": 1130,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -185,16 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1105,
+   "execution_count": 1131,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1f77b5e18b0>"
+       "<matplotlib.legend.Legend at 0x1f77e1b3220>"
       ]
      },
-     "execution_count": 1105,
+     "execution_count": 1131,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1106,
+   "execution_count": 1132,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1107,
+   "execution_count": 1133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1108,
+   "execution_count": 1134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,16 +285,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1109,
+   "execution_count": 1135,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1f7775b2af0>"
+       "<matplotlib.legend.Legend at 0x1f77e22d130>"
       ]
      },
-     "execution_count": 1109,
+     "execution_count": 1135,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1110,
+   "execution_count": 1136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1111,
+   "execution_count": 1137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,16 +365,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1112,
+   "execution_count": 1138,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1f77b599c10>]"
+       "[<matplotlib.lines.Line2D at 0x1f77e2a4220>]"
       ]
      },
-     "execution_count": 1112,
+     "execution_count": 1138,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1113,
+   "execution_count": 1139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,16 +422,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1114,
+   "execution_count": 1140,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1f77a286b50>"
+       "<matplotlib.collections.PathCollection at 0x1f77e30af40>"
       ]
      },
-     "execution_count": 1114,
+     "execution_count": 1140,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1115,
+   "execution_count": 1141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1116,
+   "execution_count": 1142,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1117,
+   "execution_count": 1143,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1118,
+   "execution_count": 1144,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1119,
+   "execution_count": 1145,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1120,
+   "execution_count": 1146,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1121,
+   "execution_count": 1147,
    "metadata": {},
    "outputs": [
     {
@@ -942,16 +942,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1122,
+   "execution_count": 1148,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1f77dfe5eb0>"
+       "<matplotlib.collections.PathCollection at 0x1f77f5bd520>"
       ]
      },
-     "execution_count": 1122,
+     "execution_count": 1148,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1123,
+   "execution_count": 1149,
    "metadata": {},
    "outputs": [
     {
@@ -1016,10 +1016,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1f77e050af0>"
+       "<matplotlib.legend.Legend at 0x1f77f62a100>"
       ]
      },
-     "execution_count": 1123,
+     "execution_count": 1149,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1045,6 +1045,35 @@
     "plt.plot(Currents, Frequencies, label=\"data\")\n",
     "plt.plot(Currents, LinFit.best_fit, '-', label='best fit')\n",
     "plt.legend()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "52763545.427105345"
+      ]
+     },
+     "execution_count": 1153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Hypothetical constant\n",
+    "MuB = 9.274e-24\n",
+    "Mu0=1.2566e-6\n",
+    "N=100\n",
+    "DeltaM=3\n",
+    "l=0.1\n",
+    "h=6.626e-34\n",
+    "\n",
+    "const=(MuB*Mu0*N*DeltaM)/(l*h)\n",
+    "const"
    ]
   }
  ],
