Changed MHz to Hz

--- a/endfile.ipynb
+++ b/endfile.ipynb
@@ -11,9 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1124,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "partially initialized module 'pandas' has no attribute 'core' (most likely due to a circular import)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Gebruiker\\OneDrive\\Documenten\\GitHub\\Rubidium-Spectroscopy\\endfile.ipynb Cell 2\u001b[0m line \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Gebruiker/OneDrive/Documenten/GitHub/Rubidium-Spectroscopy/endfile.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Import statements\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Gebruiker/OneDrive/Documenten/GitHub/Rubidium-Spectroscopy/endfile.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Gebruiker/OneDrive/Documenten/GitHub/Rubidium-Spectroscopy/endfile.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Gebruiker/OneDrive/Documenten/GitHub/Rubidium-Spectroscopy/endfile.ipynb#W1sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlmfit\u001b[39;00m \u001b[39mimport\u001b[39;00m models\n",
+      "File \u001b[1;32mc:\\Users\\Gebruiker\\anaconda3\\lib\\site-packages\\pandas\\__init__.py:135\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    117\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpandas\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcore\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcomputation\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mapi\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39meval\u001b[39m\n\u001b[0;32m    119\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpandas\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcore\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mreshape\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mapi\u001b[39;00m \u001b[39mimport\u001b[39;00m (\n\u001b[0;32m    120\u001b[0m     concat,\n\u001b[0;32m    121\u001b[0m     lreshape,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    132\u001b[0m     qcut,\n\u001b[0;32m    133\u001b[0m )\n\u001b[1;32m--> 135\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mimport\u001b[39;00m api, arrays, errors, io, plotting, testing, tseries\n\u001b[0;32m    136\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpandas\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutil\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39m_print_versions\u001b[39;00m \u001b[39mimport\u001b[39;00m show_versions\n\u001b[0;32m    138\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpandas\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mio\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mapi\u001b[39;00m \u001b[39mimport\u001b[39;00m (\n\u001b[0;32m    139\u001b[0m     \u001b[39m# excel\u001b[39;00m\n\u001b[0;32m    140\u001b[0m     ExcelFile,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    168\u001b[0m     read_spss,\n\u001b[0;32m    169\u001b[0m )\n",
+      "File \u001b[1;32mc:\\Users\\Gebruiker\\anaconda3\\lib\\site-packages\\pandas\\testing.py:6\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39mPublic testing utility functions.\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpandas\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39m_testing\u001b[39;00m \u001b[39mimport\u001b[39;00m (\n\u001b[0;32m      7\u001b[0m     assert_extension_array_equal,\n\u001b[0;32m      8\u001b[0m     assert_frame_equal,\n\u001b[0;32m      9\u001b[0m     assert_index_equal,\n\u001b[0;32m     10\u001b[0m     assert_series_equal,\n\u001b[0;32m     11\u001b[0m )\n\u001b[0;32m     13\u001b[0m __all__ \u001b[39m=\u001b[39m [\n\u001b[0;32m     14\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39massert_extension_array_equal\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m     15\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39massert_frame_equal\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m     16\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39massert_series_equal\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m     17\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39massert_index_equal\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m     18\u001b[0m ]\n",
+      "File \u001b[1;32mc:\\Users\\Gebruiker\\anaconda3\\lib\\site-packages\\pandas\\_testing\\__init__.py:979\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    974\u001b[0m     \u001b[39mimport\u001b[39;00m \u001b[39mpytest\u001b[39;00m\n\u001b[0;32m    976\u001b[0m     \u001b[39mreturn\u001b[39;00m pytest\u001b[39m.\u001b[39mraises(expected_exception, match\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m)  \u001b[39m# noqa: PDF010\u001b[39;00m\n\u001b[1;32m--> 979\u001b[0m cython_table \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mcore\u001b[39m.\u001b[39mcommon\u001b[39m.\u001b[39m_cython_table\u001b[39m.\u001b[39mitems()\n\u001b[0;32m    982\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_cython_table_params\u001b[39m(ndframe, func_names_and_expected):\n\u001b[0;32m    983\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    984\u001b[0m \u001b[39m    Combine frame, functions from com._cython_table\u001b[39;00m\n\u001b[0;32m    985\u001b[0m \u001b[39m    keys and expected result.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    997\u001b[0m \u001b[39m        List of three items (DataFrame, function, expected result)\u001b[39;00m\n\u001b[0;32m    998\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: partially initialized module 'pandas' has no attribute 'core' (most likely due to a circular import)"
+     ]
+    }
+   ],
    "source": [
     "# Import statements\n",
     "\n",
@@ -32,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1125,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1126,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1127,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1128,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1129,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1130,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1131,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1132,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1133,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,18 +289,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1134,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'peak_A' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Gebruiker\\OneDrive\\Documenten\\GitHub\\Rubidium-Spectroscopy\\endfile.ipynb Cell 16\u001b[0m line \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Gebruiker/OneDrive/Documenten/GitHub/Rubidium-Spectroscopy/endfile.ipynb#X21sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m delta_f \u001b[39m=\u001b[39m \u001b[39m6834.7e6\u001b[39m \u001b[39m#Hz\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Gebruiker/OneDrive/Documenten/GitHub/Rubidium-Spectroscopy/endfile.ipynb#X21sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m delta_t \u001b[39m=\u001b[39m \u001b[39mabs\u001b[39m(peak_A\u001b[39m-\u001b[39mpeak_B)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Gebruiker/OneDrive/Documenten/GitHub/Rubidium-Spectroscopy/endfile.ipynb#X21sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m Q \u001b[39m=\u001b[39m delta_f\u001b[39m/\u001b[39mdelta_t\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'peak_A' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "delta_f = 6834.7 #MHz\n",
+    "delta_f = 6834.7e6 #Hz\n",
     "delta_t = abs(peak_A-peak_B)\n",
     "Q = delta_f/delta_t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1135,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +346,7 @@
     "# Plotting this data\n",
     "plt.plot(df_calib[\"freq1\"],df_calib[4], label=\"Ch3\")\n",
     "plt.plot(df_calib[\"freq2\"],df_calib[10], label=\"Ch4\")\n",
-    "plt.xlabel(\"Freq. (MHz)\")\n",
+    "plt.xlabel(\"Freq. (Hz)\")\n",
     "plt.ylabel(\"Intensity in PD (v)\")\n",
     "plt.legend()"
    ]
@@ -340,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1136,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1137,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1138,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1139,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1140,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1141,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1142,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1143,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1144,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1145,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1146,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1147,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1148,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1149,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1153,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
