--- a/Fitting.ipynb
+++ b/Fitting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "[2500 rows x 2 columns]"
       ]
      },
-     "execution_count": 449,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2bee544ef70>]"
+       "[<matplotlib.lines.Line2D at 0x1f5969e1e50>]"
       ]
      },
-     "execution_count": 450,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -240,10 +240,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2bee3cbac10>"
+       "<matplotlib.legend.Legend at 0x1f597917550>"
       ]
      },
-     "execution_count": 453,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -323,10 +323,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2bee26ff6a0>"
+       "<matplotlib.legend.Legend at 0x1f59799e790>"
       ]
      },
-     "execution_count": 454,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,30 +371,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "delta_t = result.params.get(\"B_center\").value-result.params.get(\"A_center\").value\n",
-    "delta_f = 6834.7e6\n",
-    "\n",
-    "const = delta_f/delta_t\n",
-    "\n",
-    "df[\"freq\"]=const * df[3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2bee64731f0>]"
+       "119442.27849711209"
       ]
      },
-     "execution_count": 457,
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "delta_t = result.params.get(\"B_center\").value-result.params.get(\"A_center\").value\n",
+    "delta_f = 6834.7\n",
+    "\n",
+    "const = delta_f/delta_t\n",
+    "\n",
+    "df[\"freq\"]=const * df[3]\n",
+    "const"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x1f597e3e4f0>]"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -417,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -476,10 +488,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2bee64c4c70>"
+       "<matplotlib.legend.Legend at 0x1f597eba040>"
       ]
      },
-     "execution_count": 459,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -511,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
